--- a/reciperex.html
+++ b/reciperex.html
@@ -22,7 +22,7 @@
 <img class="hero" src="images/banner.jpg" alt="banner">
 
 <h1 class='section-heading'>RecipeRex</h1>
-<h2 class='section-subheading'>Search recipes using ingredient names</h2>
+<h2 class='section-subheading'>Search recipes by just using ingredient names</h2>
 <p><code class="copyright-text">Powered by <a href="http://www.recipepuppy.com/about/api/" target= "_blank">🐶 Recipe Puppy API</a></code></p>
 
 <div class="section-description">
@@ -57,9 +57,8 @@
 
 </footer>
 
-<!-- JQuery Scripts -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<!-- Our codes -->
+
 <script src="js/script.js"></script>
 
 </html>
