--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
   <div class="section-divider"><img src="images/infinity-line.png"></div>
 
   <br />
-  <p><code class="copyright-text">Search powered by <a href="http://www.recipepuppy.com/about/api/" target= "_blank">🐶 Recipe Puppy</a></code></p>
 
-  <code class="copyright-text">Crafted with ❤️ at <a href="https://coursera.org/" target= "_blank">Coursera</a></code>
+  <code class="copyright-text">Crafted with ❤️</code>
 
 </footer>
 
