--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <br />
 
-  <code class="copyright-text">Crafted with ❤️</code>
+  <code class="copyright-text">Crafted with ❤️ | <a href="https://github.com/RaghavK16/RecipeRex">Raghav Khullar</a></code>
 
 </footer>
 
