Update index and CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-<img class="banner-img" src="images/plant-based-diet-and-brain-health.jpg" alt="banner">
+<img class="rounded mx-auto d-block" src="images/banner-new.png" alt="banner">
 
 <h1 class='section-heading'>RecipeRex</h1>
 <h2 class='section-subheading'>Search recipes by just using ingredient names</h2>
