--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="favicon.ico?v=2">
+
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv=“Pragma” content=”no-cache”>
 <meta http-equiv=“Expires” content=”-1″>
@@ -13,7 +12,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="css/style.css">
 
-<title>RecipeRex</title>
+<title>RecipeRex | Recipes using ingredients</title>
 
 </head>
 
@@ -21,7 +20,6 @@
 
 <img class="rounded mx-auto d-block" src="images/banner-new.png" alt="banner">
 
-<h1 class='section-heading'>RecipeRex</h1>
 <h2 class='section-subheading'>Search recipes by just using ingredient names</h2>
 <p><code class="copyright-text">Powered by <a href="http://www.recipepuppy.com/about/api/" target= "_blank">🐶 Recipe Puppy API</a></code></p>
 
